--- a/blog-preview-card-main/style.css
+++ b/blog-preview-card-main/style.css
@@ -55,6 +55,7 @@ h3 {
 h1 {
   font-weight: var(--font-weight-extrabold);
   font-size: 20px;
+  cursor: pointer;
 }
 
 h1:hover {
@@ -73,6 +74,11 @@ p {
   gap: 0.5rem;
   font-size: var(--Font-size);
   font-weight: var(--font-weight-extrabold);
+  cursor: pointer;
+}
+
+.avatar-section:hover {
+  color: var(--Yellow);
 }
 
 .avatar-section img {
